Describe your changes

--- a/Rehabsa-Fullsa-main/src/locales/ar.json
+++ b/Rehabsa-Fullsa-main/src/locales/ar.json
@@ -17,7 +17,9 @@
     "next": "التالي",
     "previous": "السابق",
     "submit": "إرسال",
-    "reset": "إعادة تعيين"
+    "reset": "إعادة تعيين",
+    "notAvailable": "غير متوفر",
+    "noData": "لا توجد بيانات"
   },
   "notFound": {
     "message": "عذراً! الصفحة غير موجودة",
@@ -756,11 +758,28 @@
       "title": "إدارة المنتجات",
       "addProduct": "إضافة منتج",
       "productName": "اسم المنتج",
-      "price": "السعر (SAR)",
+      "price": "السعر",
       "stamps": "الطوابع",
       "stamp": "طابع",
       "shownFrom": "عرض {{shown}} من {{total}} منتج",
-      "perPage": "{{count}} / صفحة"
+      "perPage": "{{count}} / صفحة",
+      "sku": "رمز المنتج (SKU)",
+      "stock": "المخزون",
+      "status": "الحالة",
+      "currency": "العملة",
+      "actions": "الإجراءات",
+      "searchPlaceholder": "البحث في المنتجات...",
+      "noProducts": "لا توجد منتجات مسجلة",
+      "loading": "جاري تحميل المنتجات...",
+      "statusActive": "نشط",
+      "statusDraft": "مسودة",
+      "statusArchived": "مؤرشف",
+      "modalAddTitle": "إضافة منتج",
+      "modalEditTitle": "تعديل منتج",
+      "viewTitle": "تفاصيل المنتج",
+      "saveProduct": "حفظ المنتج",
+      "updateProduct": "تحديث المنتج",
+      "selectedProducts": "تم تحديد {{count}} منتج"
     },
     "settings": {
       "title": "الإعدادات",
@@ -948,6 +967,8 @@
       "templatePlaceholder": "اختر القالب",
       "productName": "اسم المنتج",
       "productNamePlaceholder": "أدخل اسم المنتج",
+      "sku": "رمز المنتج (SKU)",
+      "skuPlaceholder": "أدخل رمز SKU",
       "price": "السعر (SAR)",
       "stamps": "الطوابع",
       "category": "الفئة",
@@ -956,6 +977,8 @@
       "statusPlaceholder": "اختر الحالة",
       "description": "الوصف",
       "descriptionPlaceholder": "أدخل وصف المنتج",
+      "stock": "المخزون",
+      "stockPlaceholder": "أدخل كمية المخزون",
       "male": "ذكر",
       "female": "أنثى",
       "basicTemplate": "قالب أساسي",
@@ -1077,11 +1100,27 @@
       "view": "عرض",
       "edit": "تعديل",
       "delete": "حذف",
+      "deleteSuccess": "تم حذف المتجر بنجاح",
+      "confirmDelete": "هل أنت متأكد من حذف المتجر {{name}}؟",
       "shownFrom": "عرض {{shown}} من {{total}} متجر",
       "storeDetails": "تفاصيل المتجر",
       "backToStores": "العودة للمتاجر",
       "editStore": "تعديل المتجر",
       "storeInformation": "معلومات المتجر",
+      "nameRequired": "اسم المتجر مطلوب",
+      "createSuccess": "تم إنشاء المتجر بنجاح",
+      "updateSuccess": "تم تحديث بيانات المتجر",
+      "slug": "المعرف (Slug)",
+      "email": "البريد الإلكتروني",
+      "phone": "رقم الهاتف",
+      "country": "الدولة",
+      "city": "المدينة",
+      "address": "العنوان",
+      "currency": "العملة",
+      "themePrimary": "اللون الأساسي",
+      "themeSecondary": "اللون الثانوي",
+      "logoUrl": "رابط الشعار",
+      "coverUrl": "رابط الغلاف",
       "subscriptionEnd": "انتهاء الاشتراك",
       "lastActivity": "آخر نشاط",
       "monthlyPerformance": "الأداء الشهري",
@@ -1112,6 +1151,10 @@
       "exportSuccess": "تم تصدير البيانات بنجاح!",
       "renewalSuccess": "تم تجديد الاشتراك بنجاح",
       "cancellationSuccess": "تم إلغاء الاشتراك بنجاح",
+      "renewSuccess": "تم تجديد الاشتراك بنجاح",
+      "cancelSuccess": "تم إلغاء الاشتراك",
+      "cancelConfirm": "هل أنت متأكد من إلغاء هذا الاشتراك؟",
+      "detailsTitle": "تفاصيل الاشتراك",
       "storeName": "اسم المتجر",
       "plan": "الخطة",
       "status": "الحالة",
@@ -1120,6 +1163,8 @@
       "endDate": "تاريخ الانتهاء",
       "autoRenew": "تجديد تلقائي",
       "totalPaid": "إجمالي المدفوع",
+      "lastPayment": "آخر دفعة",
+      "nextPayment": "الدفعة القادمة",
       "actions": "الإجراءات",
       "view": "عرض",
       "edit": "تعديل",
@@ -1240,7 +1285,22 @@
       "activate": "تفعيل",
       "deactivate": "إيقاف",
       "delete": "حذف",
-      "shownFrom": "عرض {{shown}} من {{total}} مستخدم"
+      "shownFrom": "عرض {{shown}} من {{total}} مستخدم",
+      "updateSuccess": "تم تحديث بيانات المستخدم بنجاح",
+      "deleteSuccess": "تم حذف المستخدم بنجاح",
+      "statusUpdated": "تم تحديث حالة المستخدم",
+      "detailsTitle": "تفاصيل المستخدم",
+      "editTitle": "تعديل المستخدم",
+      "name": "الاسم",
+      "email": "البريد الإلكتروني",
+      "phone": "رقم الهاتف",
+      "roleLabel": "الدور",
+      "statusLabel": "الحالة",
+      "permissions": "الصلاحيات",
+      "noPermissions": "لا توجد صلاحيات مسجلة",
+      "cancel": "إلغاء",
+      "save": "حفظ",
+      "deleteConfirm": "هل أنت متأكد من حذف المستخدم {{name}}؟"
     },
     "plans": {
       "title": "إدارة الخطط",
@@ -1293,6 +1353,10 @@
       "totalComments": "إجمالي التعليقات",
       "postTitle": "عنوان المقال",
       "titleEn": "العنوان بالإنجليزية",
+      "excerpt": "الوصف المختصر",
+      "excerptPlaceholder": "أدخل وصفاً مختصراً للمقال",
+      "coverImage": "رابط صورة الغلاف",
+      "coverImagePlaceholder": "أدخل رابط صورة الغلاف (اختياري)",
       "author": "الكاتب",
       "category": "التصنيف",
       "status": "الحالة",
@@ -1341,12 +1405,14 @@
       "backToBlog": "العودة للمدونة",
       "editPost": "تعديل المقال",
       "deletePost": "حذف المقال",
+      "deletePostConfirm": "هل أنت متأكد من حذف هذا المقال؟",
       "postStats": "إحصائيات المقال",
       "views": "المشاهدات",
       "likes": "الإعجابات",
       "postInfo": "معلومات المقال",
       "lastModified": "آخر تعديل",
       "readingTime": "وقت القراءة",
+      "minutes": "دقائق",
       "commentStats": "إحصائيات التعليقات",
       "replies": "ردود",
       "approve": "موافقة",
@@ -1354,10 +1420,13 @@
       "commentApproved": "تم قبول التعليق",
       "commentRejected": "تم رفض التعليق",
       "commentDeleted": "تم حذف التعليق",
+      "commentDeleteConfirm": "هل أنت متأكد من حذف هذا التعليق؟",
+      "noComments": "لا توجد تعليقات بعد",
       "categories": "التصنيفات",
       "createCategory": "إنشاء تصنيف جديد",
       "totalCategories": "إجمالي التصنيفات",
       "mostUsedCategory": "أكثر تصنيف استخداماً",
+      "lastUpdatedCategory": "آخر تحديث للتصنيف",
       "averagePostsPerCategory": "متوسط المقالات لكل تصنيف",
       "categoryName": "اسم التصنيف",
       "categoryNameEn": "اسم التصنيف بالإنجليزية",
@@ -1372,11 +1441,14 @@
       "categoryCreateSuccess": "تم إنشاء التصنيف بنجاح",
       "categoryUpdateSuccess": "تم تحديث التصنيف بنجاح",
       "categoryDeleteSuccess": "تم حذف التصنيف بنجاح",
+      "categoryDeleteConfirm": "هل أنت متأكد من حذف التصنيف {{name}}؟",
       "createCategoryDescription": "أدخل تفاصيل التصنيف الجديد",
       "categoryNamePlaceholder": "أدخل اسم التصنيف",
       "categoryNameEnPlaceholder": "أدخل اسم التصنيف بالإنجليزية",
       "descriptionPlaceholder": "أدخل وصف التصنيف",
-      "descriptionEnPlaceholder": "أدخل وصف التصنيف بالإنجليزية"
+      "descriptionEnPlaceholder": "أدخل وصف التصنيف بالإنجليزية",
+      "saveCategory": "حفظ التصنيف",
+      "editCategory": "تعديل التصنيف"
     },
     "seo": {
       "title": "إدارة SEO",
