--- a/Rehabsa-Fullsa-main/src/locales/en.json
+++ b/Rehabsa-Fullsa-main/src/locales/en.json
@@ -17,7 +17,9 @@
     "next": "Next",
     "previous": "Previous",
     "submit": "Submit",
-    "reset": "Reset"
+    "reset": "Reset",
+    "notAvailable": "N/A",
+    "noData": "No data available"
   },
   "notFound": {
     "message": "Oops! Page not found",
@@ -737,11 +739,28 @@
       "title": "Product Management",
       "addProduct": "Add Product",
       "productName": "Product Name",
-      "price": "Price (SAR)",
+      "price": "Price",
       "stamps": "Stamps",
       "stamp": "stamp",
       "shownFrom": "Shown {{shown}} From {{total}} Products",
-      "perPage": "{{count}} / page"
+      "perPage": "{{count}} / page",
+      "sku": "SKU",
+      "stock": "Stock",
+      "status": "Status",
+      "currency": "Currency",
+      "actions": "Actions",
+      "searchPlaceholder": "Search products...",
+      "noProducts": "No products found",
+      "loading": "Loading products...",
+      "statusActive": "Active",
+      "statusDraft": "Draft",
+      "statusArchived": "Archived",
+      "modalAddTitle": "Add Product",
+      "modalEditTitle": "Edit Product",
+      "viewTitle": "Product Details",
+      "saveProduct": "Save Product",
+      "updateProduct": "Update Product",
+      "selectedProducts": "{{count}} products selected"
     },
     "settings": {
       "title": "Settings",
@@ -932,6 +951,8 @@
       "templatePlaceholder": "Select template",
       "productName": "Product Name",
       "productNamePlaceholder": "Enter product name",
+      "sku": "SKU",
+      "skuPlaceholder": "Enter product SKU",
       "price": "Price (SAR)",
       "stamps": "Stamps",
       "category": "Category",
@@ -940,6 +961,8 @@
       "statusPlaceholder": "Select status",
       "description": "Description",
       "descriptionPlaceholder": "Enter product description",
+      "stock": "Stock",
+      "stockPlaceholder": "Enter stock quantity",
       "male": "Male",
       "female": "Female",
       "basicTemplate": "Basic Template",
@@ -1061,11 +1084,27 @@
       "view": "View",
       "edit": "Edit",
       "delete": "Delete",
+      "deleteSuccess": "Store deleted successfully",
+      "confirmDelete": "Are you sure you want to delete store {{name}}?",
       "shownFrom": "Shown {{shown}} of {{total}} stores",
       "storeDetails": "Store Details",
       "backToStores": "Back to Stores",
       "editStore": "Edit Store",
       "storeInformation": "Store Information",
+      "nameRequired": "Store name is required",
+      "createSuccess": "Store created successfully",
+      "updateSuccess": "Store updated successfully",
+      "slug": "Slug",
+      "email": "Email",
+      "phone": "Phone",
+      "country": "Country",
+      "city": "City",
+      "address": "Address",
+      "currency": "Currency",
+      "themePrimary": "Primary Color",
+      "themeSecondary": "Secondary Color",
+      "logoUrl": "Logo URL",
+      "coverUrl": "Cover URL",
       "subscriptionEnd": "Subscription End",
       "lastActivity": "Last Activity",
       "monthlyPerformance": "Monthly Performance",
@@ -1096,6 +1135,10 @@
       "exportSuccess": "Data exported successfully!",
       "renewalSuccess": "Subscription renewed successfully",
       "cancellationSuccess": "Subscription cancelled successfully",
+      "renewSuccess": "Subscription renewed successfully",
+      "cancelSuccess": "Subscription cancelled",
+      "cancelConfirm": "Are you sure you want to cancel this subscription?",
+      "detailsTitle": "Subscription Details",
       "storeName": "Store Name",
       "plan": "Plan",
       "status": "Status",
@@ -1104,6 +1147,8 @@
       "endDate": "End Date",
       "autoRenew": "Auto Renew",
       "totalPaid": "Total Paid",
+      "lastPayment": "Last Payment",
+      "nextPayment": "Next Payment",
       "actions": "Actions",
       "view": "View",
       "edit": "Edit",
@@ -1222,7 +1267,22 @@
       "activate": "Activate",
       "deactivate": "Deactivate",
       "delete": "Delete",
-      "shownFrom": "Shown {{shown}} of {{total}} users"
+      "shownFrom": "Shown {{shown}} of {{total}} users",
+      "updateSuccess": "User updated successfully",
+      "deleteSuccess": "User deleted successfully",
+      "statusUpdated": "User status updated",
+      "detailsTitle": "User Details",
+      "editTitle": "Edit User",
+      "name": "Name",
+      "email": "Email",
+      "phone": "Phone",
+      "roleLabel": "Role",
+      "statusLabel": "Status",
+      "permissions": "Permissions",
+      "noPermissions": "No permissions assigned",
+      "cancel": "Cancel",
+      "save": "Save",
+      "deleteConfirm": "Are you sure you want to delete user {{name}}?"
     },
     "plans": {
       "title": "Plans Management",
@@ -1275,6 +1335,10 @@
       "totalComments": "Total Comments",
       "postTitle": "Post Title",
       "titleEn": "English Title",
+      "excerpt": "Excerpt",
+      "excerptPlaceholder": "Enter a short summary",
+      "coverImage": "Cover Image URL",
+      "coverImagePlaceholder": "Enter a cover image URL (optional)",
       "author": "Author",
       "category": "Category",
       "status": "Status",
@@ -1323,12 +1387,14 @@
       "backToBlog": "Back to Blog",
       "editPost": "Edit Post",
       "deletePost": "Delete Post",
+      "deletePostConfirm": "Are you sure you want to delete this post?",
       "postStats": "Post Statistics",
       "views": "Views",
       "likes": "Likes",
       "postInfo": "Post Information",
       "lastModified": "Last Modified",
       "readingTime": "Reading Time",
+      "minutes": "minutes",
       "commentStats": "Comment Statistics",
       "replies": "Replies",
       "approve": "Approve",
@@ -1336,10 +1402,13 @@
       "commentApproved": "Comment approved",
       "commentRejected": "Comment rejected",
       "commentDeleted": "Comment deleted",
+      "commentDeleteConfirm": "Are you sure you want to delete this comment?",
+      "noComments": "No comments yet",
       "categories": "Categories",
       "createCategory": "Create New Category",
       "totalCategories": "Total Categories",
       "mostUsedCategory": "Most Used Category",
+      "lastUpdatedCategory": "Last Updated Category",
       "averagePostsPerCategory": "Average Posts Per Category",
       "categoryName": "Category Name",
       "categoryNameEn": "English Category Name",
@@ -1354,11 +1423,14 @@
       "categoryCreateSuccess": "Category created successfully",
       "categoryUpdateSuccess": "Category updated successfully",
       "categoryDeleteSuccess": "Category deleted successfully",
+      "categoryDeleteConfirm": "Are you sure you want to delete category {{name}}?",
       "createCategoryDescription": "Enter details for the new category",
       "categoryNamePlaceholder": "Enter category name",
       "categoryNameEnPlaceholder": "Enter English category name",
       "descriptionPlaceholder": "Enter category description",
-      "descriptionEnPlaceholder": "Enter English category description"
+      "descriptionEnPlaceholder": "Enter English category description",
+      "saveCategory": "Save Category",
+      "editCategory": "Edit Category"
     },
     "seo": {
       "title": "SEO Management",
